# AetherIot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README-CN.md  README.md  SUPPORT.md  aether-contracts.lock.json  docker-compose.yml  llms.txt
crates/aether-application/: Cargo.toml  README.md
crates/aether-application/src/: acceptance.rs  action_routing.rs  alarm_rule.rs  alert_resolution.rs  capability.rs  channel_management.rs  channel_reconciliation.rs  context.rs  control.rs  data_processing.rs  edge.rs  error.rs  lib.rs  measurement_routing.rs  rule_execution.rs  rule_mutation.rs
crates/aether-application/tests/: action_routing_application.rs  alarm_rule_application.rs  alert_resolution_application.rs  application_contract.rs  channel_management_application.rs  channel_reconciliation_application.rs  data_processing_application.rs  measurement_routing_application.rs  rule_execution_application.rs  rule_mutation_application.rs  safety_policy_contract.rs
crates/aether-cloudlink/: Cargo.toml  README.md
crates/aether-cloudlink/src/: codec.rs  error.rs  lib.rs  session.rs  telemetry.rs  validation.rs
crates/aether-cloudlink/tests/: codec_contract.rs  offline_independence.rs  vertical_slice.rs
crates/aether-data-processing/: Cargo.toml  README.md
crates/aether-data-processing/src/: codec.rs  dto.rs  lib.rs
crates/aether-data-processing/tests/: codec_contract.rs
crates/aether-dataplane/: Cargo.toml  README.md
crates/aether-dataplane/src/: core.rs  lib.rs
crates/aether-dataplane/tests/: mmap_validation.rs
crates/aether-domain/: Cargo.toml  README.md
crates/aether-domain/src/: alarm.rs  command.rs  data_processing.rs  error.rs  identity.rs  lib.rs  point.rs
crates/aether-domain/tests/: data_processing_contract.rs  domain_contract.rs
crates/aether-integration-contract/: Cargo.toml
crates/aether-integration-control/: Cargo.toml
crates/aether-pack/: Cargo.toml  README.md
crates/aether-pack/src/: lib.rs
crates/aether-pack/tests/: active_pack_config.rs  asset_index_contract.rs  manifest_contract.rs
crates/aether-ports/: Cargo.toml  README.md
crates/aether-ports/src/: acquisition.rs  alarm.rs  automation.rs  channel.rs  clock.rs  cloudlink.rs  control.rs  data_processing.rs  error.rs  lib.rs
crates/aether-ports/tests/: action_routing_contract.rs  channel_management_contract.rs  data_processing_ports.rs  measurement_routing_contract.rs  port_contract.rs  rule_mutation_contract.rs
crates/aether-sdk/: Cargo.toml  README.md
crates/aether-sdk/src/: lib.rs
crates/aether-sdk/tests/: local_runtime_facade.rs  sdk_contract.rs
crates/aether-testkit/: Cargo.toml  README.md
crates/aether-testkit/src/: lib.rs
crates/aether-testkit/tests/: cloudlink_transport.rs  data_processor_conformance.rs  history_query_conformance.rs  public_surface.rs
examples/energy-gateway/: Cargo.toml  README.md
examples/energy-gateway/src/: forecast.rs  lib.rs  load_forecast.rs  main.rs
examples/energy-gateway/tests/: composition_contract.rs  data_processing_composition.rs  pack_artifact_contract.rs
extensions/auth-jwt/: Cargo.toml
extensions/auth-jwt/src/: lib.rs
extensions/auth-jwt/tests/: access_token_contract.rs
extensions/cloudlink-mqtt/: Cargo.toml  README.md
extensions/cloudlink-mqtt/src/: config.rs  lib.rs  topics.rs  transport.rs
extensions/cloudlink-mqtt/tests/: config_and_topics.rs  shared_broker.rs
extensions/home-assistant-bridge/: Cargo.toml
extensions/home-assistant-bridge/src/: websocket.rs
extensions/http-data-processor/: Cargo.toml  README.md
extensions/http-data-processor/src/: adapter.rs  config.rs  lib.rs
extensions/http-data-processor/tests/: http_data_processor.rs
extensions/postgres-history/: Cargo.toml
extensions/redis-bridge/: Cargo.toml
extensions/shm-bridge/: Cargo.toml
extensions/shm-bridge/src/: acquisition_writer.rs  channel_reader.rs  command_sink.rs  events.rs  health.rs  lib.rs  managed.rs  manifest.rs  point_watch.rs  read_topology.rs  runtime.rs  topology_commit.rs
extensions/shm-bridge/tests/: acquisition_writer_contract.rs  channel_health_writer_handle_contract.rs  channel_manifest_contract.rs  device_command_sink_contract.rs  point_watch_publisher_contract.rs  read_topology_generation_contract.rs  runtime_generation_contract.rs  shm_bridge_contract.rs  topology_process_stress.rs
extensions/sqlite-history-query/: Cargo.toml  README.md
extensions/sqlite-history-query/src/: adapter.rs  config.rs  lib.rs
extensions/sqlite-history-query/tests/: sqlite_history_query.rs
extensions/store-local/: Cargo.toml  README.md
extensions/store-local/src/: clock.rs  cloudlink_spool.rs  data_processing.rs  file_cloudlink_spool.rs  lib.rs  snapshot_covariates.rs  sqlite_topology.rs
extensions/store-local/tests/: cloudlink_spool.rs  data_processing_sources.rs  snapshot_covariate_source.rs  sqlite_live_topology_contract.rs  sqlite_topology_contract.rs
integrations/load-forecasting/: README.md  pyproject.toml
integrations/load-forecasting/deploy/: README.md  aether-load-forecasting-processor.service  docker-compose.data-processing.yaml  load-forecasting-processor.env.example  validate-production-env.sh
integrations/load-forecasting/tests/: conftest.py  test_api.py  test_backend_registry.py  test_composition.py  test_edge_platform_engine.py  test_foundation_backend.py  test_mock_chronos_service.py  test_remote_http_backend.py  test_repository_fixture.py
libs/aether-rtdb-shm/: Cargo.toml
libs/aether-rtdb-shm/src/: batch_direct.rs  channel_points.rs  dispatch.rs  layout.rs  notifier.rs  point_watch.rs  reverse_index.rs  shared_config.rs  shm_handle.rs  snapshot.rs  unified_shm.rs
libs/aether-rules/: Cargo.toml
libs/aether-rules/src/: action_command.rs  executor.rs  executor_tests.rs  lib.rs  live_state.rs  point_watch_dispatcher.rs  (+1 more)
libs/aether-runtime-catalog/: Cargo.toml
services/alarm/: Cargo.toml
services/api/: Cargo.toml
services/automation/: Cargo.toml
workspace-hack/: Cargo.toml
(+560 files in other folders)
