[package]
name = "aether-application"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Transport-neutral commands, queries, and safety policy for Aether"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/crates/aether-application"
readme = "README.md"
keywords = ["iot", "edge", "gateway", "automation"]
categories = ["embedded", "asynchronous"]

[dependencies]
aether-data-processing = { version = "0.5.0", path = "../aether-data-processing" }
aether-domain = { version = "0.5.0", path = "../aether-domain" }
aether-ports = { version = "0.5.0", path = "../aether-ports" }
thiserror = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
aether-store-local = { version = "0.5.0", path = "../../extensions/store-local" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
