[package]
name = "aether-cloudlink"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Transport-neutral experimental CloudLink protocol foundation"
license.workspace = true
repository.workspace = true

[dependencies]
aether-domain = { version = "0.5.0", path = "../aether-domain" }
aether-ports = { version = "0.5.0", path = "../aether-ports" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aether-runtime-catalog = { version = "0.5.0", path = "../../libs/aether-runtime-catalog" }
aether-store-local = { version = "0.5.0", path = "../../extensions/store-local" }
aether-testkit = { version = "0.5.0", path = "../aether-testkit" }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
