[package]
name = "aether-cloudlink"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Transport-neutral experimental CloudLink protocol foundation"
license.workspace = true
repository.workspace = true

[dependencies]
aether-domain = { version = "0.0.1", path = "../aether-domain" }
aether-integration-contract = { version = "0.0.1", path = "../aether-integration-contract" }
aether-ports = { version = "0.0.1", path = "../aether-ports" }
async-trait = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
zeroize = { workspace = true }

[dev-dependencies]
aether-runtime-catalog = { version = "0.0.1", path = "../../libs/aether-runtime-catalog" }
aether-store-local = { version = "0.0.1", path = "../../extensions/store-local" }
aether-testkit = { version = "0.0.1", path = "../aether-testkit" }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
