[package]
name = "aether-data-processing"
version.workspace = true
edition = "2024"
rust-version = "1.90"
description = "Strict Data Processing v1 wire codec and canonical digest for Aether"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aether-data-processing"
readme = "README.md"
keywords = ["iot", "edge", "data-processing", "json"]
categories = ["encoding", "data-structures"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../aether-domain" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
