[package]
name = "aether-dataplane"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Business-neutral shared-memory data plane for Aether edge gateways"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/crates/aether-dataplane"
readme = "README.md"
keywords = ["iot", "edge", "shared-memory", "gateway"]
categories = ["embedded", "concurrency"]

[dependencies]
fs2 = "0.4"
memmap2 = "0.9.11"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
