[package]
name = "aether-integration-control"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Default-off governed Integration control for AetherEdge"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.dev/crates/aether-integration-control"
readme = "README.md"
keywords = ["iot", "edge", "integration", "control"]
categories = ["asynchronous", "encoding"]

[dependencies]
aether-cloudlink = { version = "0.0.1", path = "../aether-cloudlink" }
aether-domain = { version = "0.0.1", path = "../aether-domain" }
aether-ports = { version = "0.0.1", path = "../aether-ports" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
