[package]
name = "aether-pack"
version.workspace = true
edition = "2024"
rust-version = "1.90"
description = "Versioned, industry-neutral domain-pack contract for Aether"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aether-pack"
readme = "README.md"
keywords = ["iot", "edge", "pack", "configuration"]
categories = ["config", "data-structures"]

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
