[package]
name = "aether-ports"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Object-safe capability ports for Aether edge extensions"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/crates/aether-ports"
readme = "README.md"
keywords = ["iot", "edge", "gateway", "ports"]
categories = ["embedded", "asynchronous"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../aether-domain" }
async-trait = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
