[package]
name = "aether-testkit"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Conformance suites for Aether port implementations"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/crates/aether-testkit"
readme = "README.md"
keywords = ["iot", "edge", "gateway", "testing"]
categories = ["development-tools::testing"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../aether-domain" }
aether-ports = { version = "0.5.0", path = "../aether-ports" }
async-trait = { workspace = true }
tokio = { version = "1.35", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
