[package]
name = "aether-auth-jwt"
version.workspace = true
edition = "2024"
rust-version = "1.90"
description = "JWT authentication adapter for Aether application interfaces"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
aether-application = { version = "0.5.0", path = "../../crates/aether-application" }
aether-domain = { version = "0.5.0", path = "../../crates/aether-domain" }
jsonwebtoken = "9"
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
