[package]
name = "aether-http-data-processor"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Bounded HTTP DataProcessor adapter for Aether"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/extensions/http-data-processor"
readme = "README.md"
keywords = ["iot", "edge", "http", "data-processing"]
categories = ["web-programming::http-client", "asynchronous"]

[dependencies]
aether-data-processing = { version = "0.5.0", path = "../../crates/aether-data-processing" }
aether-domain = { version = "0.5.0", path = "../../crates/aether-domain" }
aether-ports = { version = "0.5.0", path = "../../crates/aether-ports" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6.5"

[lints]
workspace = true
