[package]
name = "aether-redis-bridge"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Optional Redis live-state mirror for Aether"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/extensions/redis-bridge"
readme = "README.md"
keywords = ["iot", "edge", "redis", "gateway"]
categories = ["embedded", "database"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../../crates/aether-domain" }
aether-ports = { version = "0.5.0", path = "../../crates/aether-ports" }
async-trait = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
