[package]
name = "aether-shm-bridge"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Typed Aether domain-port bridge for the shared-memory data plane"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/extensions/shm-bridge"
readme = "README.md"
keywords = ["iot", "edge", "shared-memory", "gateway"]
categories = ["embedded", "asynchronous"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../../crates/aether-domain" }
aether-dataplane = { version = "0.5.0", path = "../../crates/aether-dataplane" }
aether-ports = { version = "0.5.0", path = "../../crates/aether-ports" }
async-trait = { workspace = true }
arc-swap = "1.7"
rustc-hash = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
