[package]
name = "aether-sqlite-history-query"
version.workspace = true
publish = false
edition = "2024"
rust-version = "1.90"
description = "Read-only embedded SQLite HistoryQuery adapter for Aether Data Processing"
license.workspace = true
repository.workspace = true
documentation = "https://docs.aetheriot.workers.dev/extensions/sqlite-history-query"
readme = "README.md"
keywords = ["iot", "edge", "sqlite", "history", "data-processing"]
categories = ["database", "asynchronous"]

[dependencies]
aether-domain = { version = "0.5.0", path = "../../crates/aether-domain" }
aether-ports = { version = "0.5.0", path = "../../crates/aether-ports" }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
aether-testkit = { version = "0.5.0", path = "../../crates/aether-testkit" }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
