[project]
name = "aether-load-forecasting-processor"
version = "0.1.0"
description = "Request-driven Aether Data Processing adapter for Load-Forecasting Edge-Platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "rfc8785>=0.1.4,<1.0",
    "uvicorn>=0.34.0,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0",
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=6.0.0,<7.0",
    "ruff>=0.11.0,<1.0",
]

[build-system]
requires = ["hatchling>=1.27.0,<2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_load_forecasting_processor"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=aether_load_forecasting_processor --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
